# networkprogramming_hw3

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: test_dbclient.py
src/client/: .env  .env example  client.py  client2.0.py
src/database/: .env  .env example  DBinit.py  DBserver.py
src/database/data/: database.db
src/developer_client/: .env  .env example  create_template.py  developer_client.py  prompt_cheatsheet
src/developer_client/games/battle_ship/: config.json  pyproject.toml
src/developer_client/games/battle_ship/client/: client_main.py
src/developer_client/games/battle_ship/server/: server_main.py
src/developer_client/games/game2/: config.json
src/developer_client/games/mine/: config.json  pyproject.toml
src/developer_client/games/mine/client/: client_main.py
src/developer_client/games/mine/server/: server_main.py
src/developer_client/games/pss/: config.json  pyproject.toml
src/developer_client/games/pss/client/: client_main.py
src/developer_client/games/pss/server/: server_main.py
src/developer_client/template/: config.json
src/servers/: .env  .env example  DBclient.py  developer_server.py  get_game.py  lobby.py
src/servers/uploaded_games/1/0.0.0/: config.json
src/servers/uploaded_games/1/0.0.1/: config.json
src/servers/uploaded_games/1/game1/0.0.3/: config.json
src/servers/uploaded_games/1/game1/0.0.4/: config.json
src/servers/uploaded_games/1/game1/0.0.5/: config.json
test/: test.py  try.py
utils/: pyproject.toml
utils/src/utils/: TCPutils.py
(+3 files in other folders)
