[project]
name = "hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv==0.9.9",
    "python-dotenv==1.2.1",
    "utils",
]

[tool.uv.sources]
utils = { workspace = true }

[tool.uv.workspace]
members = [
    "utils",
]
exclude = [
    "src/developer_client/games/*",
    "src/servers/uploaded_games/*",
    "src/client/downloads/*", 
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
